--- a/css/style.css
+++ b/css/style.css
@@ -12,8 +12,10 @@ header {
   padding: 16px;
   text-align: center;
 }
-header .logo-name {
-  margin-bottom: 24px;
+@media screen and (max-width: 600px) {
+  header .logo-name {
+    margin-bottom: 24px;
+  }
 }
 header .logo-name .name {
   font-size: 28px;
@@ -36,6 +38,24 @@ header .nav-items a {
   color: #0D85C1;
 }
 
+@media screen and (min-width: 600px) {
+  header {
+    display: flex;
+    align-items: flex-end;
+    justify-content: space-between;
+  }
+  header .logo-name .name {
+    margin-bottom: 0;
+  }
+  header .nav-items {
+    width: 50%;
+  }
+}
+main section .jumbotron img {
+  height: 300px;
+  width: 100%;
+}
+
 footer {
   background-color: #ffb6b6;
   padding: 16px;
@@ -55,4 +75,12 @@ footer .info {
 }
 footer .info p {
   margin: 5px 0;
+}
+
+@media screen and (min-width: 600px) {
+  footer .social-media {
+    width: 50%;
+    margin-left: auto;
+    margin-right: auto;
+  }
 }/*# sourceMappingURL=style.css.map */
