--- a/css/style.scss
+++ b/css/style.scss
@@ -22,7 +22,10 @@ header {
     @include background-stuff();
 
     .logo-name {
-        margin-bottom: 24px;
+        
+        @media screen and (max-width: 600px) {
+            margin-bottom: 24px;
+        }
 
         .name {
             font-size: 28px;
@@ -51,6 +54,37 @@ header {
     }
 }
 
+@media screen and (min-width: 600px) {
+    header {
+        display: flex;
+        align-items: flex-end;
+        justify-content: space-between;
+
+        .logo-name {
+            // margin-bottom: 0; this will be taken care in the mobile view
+
+            .name {
+                margin-bottom: 0
+            }
+        }
+        .nav-items {
+            width: 50%;
+
+        }
+        
+    }
+}
+main {
+    section {
+        .jumbotron {
+            img {
+                height: 300px;
+                width: 100%;            
+            }
+        }
+    }
+}
+
 footer {
    @include background-stuff();
 
@@ -64,10 +98,8 @@ footer {
         i {
             color: #1c3c5c;
             font-size: 24px;
-        }
-        
-
-    }
+        } 
+      }
    }
 
    .info {
@@ -76,5 +108,16 @@ footer {
         p {
             margin: 5px 0;
         }
-   }
+    }
+}
+
+@media screen and (min-width: 600px) {
+    footer {
+        .social-media {
+            width: 50%;
+            margin-left: auto;
+            margin-right: auto;
+        }
+    }
+    
 }
