--- a/css/style.css
+++ b/css/style.css
@@ -1,12 +1,4 @@
-body {
-  margin: 0;
-  background-color: #a5a5a5;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-}
-
+/*this to import the color profile from color.scss from default folder */
 header {
   background-color: #ffb6b6;
   padding: 16px;
@@ -22,10 +14,10 @@ header .logo-name .name {
   color: #0D85C1;
 }
 header .logo-name .name .coder-text {
-  color: #0D85C1;
+  color: #45A7C5;
 }
 header .logo-name .name .academy-text {
-  color: #008CCE;
+  color: #1C3C5C;
 }
 header .nav-items {
   width: 100%;
@@ -51,11 +43,6 @@ header .nav-items a {
     width: 50%;
   }
 }
-main section .jumbotron img {
-  height: 300px;
-  width: 100%;
-}
-
 footer {
   background-color: #ffb6b6;
   padding: 16px;
@@ -67,11 +54,11 @@ footer .social-media {
   margin-bottom: 24px;
 }
 footer .social-media a i {
-  color: #1c3c5c;
+  color: #1C3C5C;
   font-size: 24px;
 }
 footer .info {
-  color: rgb(41, 40, 40);
+  color: #1C3C5C;
 }
 footer .info p {
   margin: 5px 0;
@@ -83,4 +70,12 @@ footer .info p {
     margin-left: auto;
     margin-right: auto;
   }
+}
+body {
+  margin: 0;
+  background-color: #a5a5a5;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }/*# sourceMappingURL=style.css.map */
