--- a/css/style.scss
+++ b/css/style.scss
@@ -1,11 +1,7 @@
-$primary-background: #ffb6b6;
+@import "./defaults/color"; /*this to import the color profile from color.scss from default folder */
+@import "./componenets/header";
+@import "./componenets/footer";
 
-@mixin background-stuff() {
-    background-color: $primary-background;
-    padding: 16px;
-    text-align: center;
-
-}
 
 body {
     margin: 0;
@@ -18,106 +14,5 @@ body {
 
 }
 
-header {
-    @include background-stuff();
 
-    .logo-name {
-        
-        @media screen and (max-width: 600px) {
-            margin-bottom: 24px;
-        }
 
-        .name {
-            font-size: 28px;
-            color: #0D85C1;
-
-            .coder-text {
-                color: #0D85C1;
-            }
-
-            .academy-text {
-                color: #008CCE;
-            }
-        }
-    }
-
-    .nav-items {
-        width: 100%;
-        display: flex;
-        justify-content: space-around;
-        font-size: 18px;
-
-        a {
-            text-decoration: none;
-            color: #0D85C1;
-        }
-    }
-}
-
-@media screen and (min-width: 600px) {
-    header {
-        display: flex;
-        align-items: flex-end;
-        justify-content: space-between;
-
-        .logo-name {
-            // margin-bottom: 0; this will be taken care in the mobile view
-
-            .name {
-                margin-bottom: 0
-            }
-        }
-        .nav-items {
-            width: 50%;
-
-        }
-        
-    }
-}
-main {
-    section {
-        .jumbotron {
-            img {
-                height: 300px;
-                width: 100%;            
-            }
-        }
-    }
-}
-
-footer {
-   @include background-stuff();
-
-   .social-media {
-    display: flex;
-    justify-content: space-around;
-
-    margin-bottom: 24px;
-
-    a {
-        i {
-            color: #1c3c5c;
-            font-size: 24px;
-        } 
-      }
-   }
-
-   .info {
-        color: rgb(41, 40, 40);
-
-        p {
-            margin: 5px 0;
-        }
-    }
-}
-
-@media screen and (min-width: 600px) {
-    footer {
-        .social-media {
-            width: 50%;
-            margin-left: auto;
-            margin-right: auto;
-        }
-    }
-    
-}
